--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -1,7 +1,7 @@
 @media only screen and (min-width: 64rem){
     body{
         display: grid;
-        grid-template-columns: 1fr 8fr 1fr;
+        grid-template-columns: 1fr 3fr 1fr;
         /* grid-template-rows: 1fr 3fr 1fr; */
         margin: 1%;
 
@@ -11,18 +11,26 @@
     #top{
         grid-template-rows: 1fr 1fr;
     }
-    header, main{
-        grid-column: 2/3;
+    header, .homeMain{
+        grid-column: 1/4;
         border: 5px solid black;
+    }
+
+    #discoverContent{
+        grid-column: 2/3;
+        grid-row: 2/3;
+        margin: 1%
+        
     }
 
     /* main{
         grid-column: 2/3;
         grid-row: 2/3
     } */
+
     footer{
         grid-row: 3/4;
-        grid-column: 2/3;
+        grid-column: 1/4;
     }
 
 
@@ -291,8 +299,105 @@
         flex-direction: column;
     }
 
+
+
+
+    /*-------------------JOIN PAGE---------------*/
+
+    /* #joinPageMain{
+        grid-column: 1/4;
+        display: grid;
+        grid-template-columns: 2fr 2fr;
+    } */
+
+    form{
+        grid-row: 2/3;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        
+        width: 100%;
+        /* display: grid;
+        grid-template-rows: 1fr 1fr 1fr; */
+        
+    }
+
+    fieldset:nth-child(2){
+        grid-row: 2/3;
+    }
+    /* fieldset:nth-child(2){
+        display: flex;
+        
+    } */
+
+    /* .bname, .bposition{
+        width: 100%;
+    }
+
+    .bdescription{
+        width: 100%;
+    }
+
+    textarea{
+        width: 100%;
+    } */
+
+
+    #joinPageMain{
+        grid-column: 1/4;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+
+    #joinPageMain h1{
+        /* background-color: pink; */
+        grid-column: 1/4; 
+    }
+
+    fieldset:nth-child(3){
+        display: flex;
+        flex-direction: column;
+        grid-row: 2/3;
+        grid-column: 2/3;
+        max-width: 100%;
+        font-size: 2rem;
+    }
+
+    .memberLevels{
+        grid-column: 2/3;
+        grid-row: 2/3;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        /* background-color: pink; */
+    }
+
+    .memberLevels h2{
+        grid-column: 1/3;
+    }
+
+    .card:nth-child(6){
+        grid-column: 1/3;
+    }
+
+
+    fieldset  {
+        width: 80%;
+    }
+
+    input{
+        width: 80%;
+    }
+
+
+
+
+
+
+/*--------------Thank You Page----------*/
+
+#thankYouMain{
+    grid-column: 2/3;
 }
 
 
-/*-------------------JOIN PAGE---------------*/
-
+}
