--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -21,7 +21,7 @@
  
 
 
-    main{
+    .homeMain{
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
         margin-top: 10px;
@@ -226,6 +226,108 @@
     }
    
 
+
+
+
+
+    /*----------------JOIN PAGE-----------*/
+    /*-------THIS NEEDS TO BE IT'S OWN ID AND UNIQUE TO THIS PAGE AND SIMILAR CHANGES HAVE TO HAPPEN ON OTHER PAGES
+    ------*/
+    /* main{  
+        display: block;
+    } */
+    
+
+    /* form{
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
+    } */
+
+    /* fieldset{
+        height: 420px;
+    } */
+
+    /* form h1 {
+        grid-column: 1/3;
+    } */
+
+    .sbs{
+        
+        font-size: 1rem;
+        gap: 2%;
+        margin: 1%;
+        border: 3px solid white;
+        border-radius: 25px;
+    }
+
+    input[type="radio"]{
+        height: 1.9rem;
+        width: 1.9rem;
+    }
+
+    fieldset:nth-child(1){
+        display: flex;
+        flex-direction: column;
+        
+    }
+
+    fieldset:nth-child(3){
+        display: flex;
+        flex-direction: row;
+        grid-row: 2/3;
+        grid-column: 2/3;
+        max-width: 100%;
+        font-size: 1rem;
+    }
+
+    fieldset:nth-child(2){
+        grid-column: 1/3;
+        display: grid;
+        grid-template-columns: 1fr 1fr
+        ;
+        
+    }
+
+    /* fieldset:nth-child(2) input {
+        width: 100%;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    } */
+
+    .bdescription {
+        grid-column: 1/3;
+        
+
+    }
+
+    /* #textarea{
+        resize: none;
+        height: auto;
+    } */
+    /* .bname, .bposition{
+        width: 50%;
+    }
+
+    .bdescription{
+        width: 75%;
+    } */
+
+    /* textarea{
+        width: 80%;
+    } */
+
+
+
+
+    .submitBtn{
+        grid-column: 1/3;
+        
+
+        
+
+
+    }
     
 
 
