--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -173,10 +173,11 @@
     }
 
     
-    /* #heroSection img{
+    #heroSection img{
         height: 100%;
         width: 100%;
-    } */
+        object-fit: cover;
+    }
 
 
     #spotlightSection{
@@ -184,7 +185,8 @@
         order: 3;
         grid-column: 3/4;
         grid-row: 1/4;
-        grid-template-columns: 1fr;
+        /* grid-template-columns: 1fr; */
+        flex-direction: column;
 
     }
 
@@ -193,9 +195,9 @@
         grid-template-columns: 1fr;
     }
 
-    #spotThree img{
+    /* #spotThree img{
         width: 100%;
-    }
+    } */
 
     #weatherSection{
         order: 4;
