--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -33,8 +33,8 @@ body{
     /* display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr; */
-    margin: 1%;
-    padding: 1%;
+    margin: 2%;
+    padding: 2%;
     
     
     margin-bottom: .3rem;
@@ -209,11 +209,13 @@ nav a.active{
 /*----------------Main-------------*/
 
 .homeMain{
+    display: flex;
+    flex-direction: column;
     border: 3px;
     border-style: solid;
     border-color: black;
     gap: 10px;
-    margin-bottom: 40px;
+    /* margin-bottom: 40px; */
     margin: 2%;
     padding: 2%;
     
@@ -230,8 +232,7 @@ nav a.active{
     border-style: solid;
     border-color: black;
     background-color: #fcbf49;
-    width: 100%;
-    margin-bottom: 2%;
+    
     
     
 
@@ -278,7 +279,9 @@ nav a.active{
     font-size: 1.5em;
     right: 20px;
     bottom: 20px;
-    background-color: limegreen;
+    background-color: #003049;
+    color: #eae2b7;
+    border: 5px solid #eae2b7;
     margin: 2%;
     padding: 2%;
     border-radius: 10px;
@@ -288,8 +291,9 @@ nav a.active{
 }
 
 #heroSection .joinButton:hover {
-    background-color:#003049;
-    color:#eae2b7
+    background-color:#eae2b7;
+    border: 5px solid #003049;
+    color: #003049
 }
 
 
@@ -331,40 +335,63 @@ nav a.active{
 
 /*-------------------Weather Section----------------*/
 
-#weatherContainer{
+/* #weatherContainer{
     display: grid;
     grid-template-columns: 1fr;
-}
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    
+} */
 
 .weatherContainerTop{
     display: grid;
     grid-template-columns: 1fr 1fr;
     border-bottom: 1px solid black;
+    justify-content: center;
+    align-items: center;
     
  
     
 }
 
+.weatherContainerTop h2{
+    grid-column: 1/3;
+}
+
+.weatherContainerTop img{
+    margin-left: auto;
+    margin-right: auto;
+    border: 2px solid #003049;
+    border-radius: 10%;
+}
 
 
-#degree{
-    display: flex;
+#weatherHeader, #degree, #windSpeed, #windChill,#speedValue, #chillValue{
+    /* display: flex;
     justify-content: center;
     align-items: center;
-    text-align: center;
-    font-size: 2em;
+    text-align: center; */
+    font-size: 1.5em;
+    
     
 }
 
 #weatherDescription{
     grid-column: 1/3;
-    text-align: right;
+    text-align: Center;
+    font-size: 1.5rem;
+    margin: 2%;
+    padding: 2%;
 }
 
 .weatherContainerBottom{
     display: grid;
     grid-template-columns: 1fr 1fr;
     text-align: center;
+    font-size: 1.5rem;
+    margin: 2%;
+    padding: 2%;
 }
 
 /*-----------------News Section----------*/
@@ -386,12 +413,14 @@ nav a.active{
 
 #spotlightSection {
     
-    display:grid;
-    grid-template-columns: 1fr;
+    /* display:grid;
+    grid-template-columns: 1fr; */
+    display: flex;
+    flex-direction: column;
     border: 3px;
     border-style: solid;
     border-color: black;
-    /* background-color: red; */
+    background-color: #eae2b7; 
     
     gap: 10px;
     font-size: 1.25em;
@@ -408,11 +437,26 @@ nav a.active{
     display:grid;
     grid-template-columns: 1fr;
     border: 2px solid black;
+    background-color: #fcbf49;
+    
+   
+  
     
 }
 
 .spotBottom{
     border-top: 1px solid black;
+    
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding: 2%;
+    gap: 3px;
+    justify-content: center;
+    align-items: center;
+    
 }
 
 #spotOne img, #spotTwo img{
