--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -698,6 +698,8 @@ legend{
     font-size: 1.2rem;
     margin: 2%;
     padding: 2%;
+    border-radius: 10px;
+    border: 5px solid #d62828
 }
 
 textarea{
@@ -777,7 +779,14 @@ label{
     display: block;
     margin: 2%;
     padding: 2%;
+    border-radius: 10px;
     
+}
+
+.required{
+    width: 25%;
+    color: #d62828;
+    font: bolder;
 }
 
 .submitBtn{
@@ -830,6 +839,31 @@ label{
     text-align: left;
     font-size: 1.2rem;
 }
+
+
+
+
+/*-----------------------Contact Page----------------------*/
+
+
+.contactSection h2{
+    display: none;
+}
+
+.contactSection h3, .contactSection p{
+    text-align: left;
+    margin: 1.5rem;
+    
+}
+
+
+
+.contact{
+    height: 70px;
+    width: 90%;
+    
+}
+
 
 
 
