style update for home page

--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -34,6 +34,10 @@
        
     }
 
+    #welcome{
+        font-size: 4rem;
+    }
+
     #heroSection, #weatherSection, #newsSection, #spotlightSection{
         grid-column: 1/ span 3;
         
