--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -228,32 +228,13 @@
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
-        
         width: 100%;
-        /* display: grid;
-        grid-template-rows: 1fr 1fr 1fr; */
-        
     }
 
     fieldset:nth-child(2){
         grid-row: 2/3;
     }
-    /* fieldset:nth-child(2){
-        display: flex;
-        
-    } */
-
-    /* .bname, .bposition{
-        width: 100%;
-    }
-
-    .bdescription{
-        width: 100%;
-    }
-
-    textarea{
-        width: 100%;
-    } */
+    
 
 
     #joinPageMain{
@@ -263,7 +244,6 @@
     }
 
     #joinPageMain h1{
-        /* background-color: pink; */
         grid-column: 1/4; 
     }
 
@@ -281,7 +261,6 @@
         grid-row: 2/3;
         display: grid;
         grid-template-columns: 1fr 1fr;
-        /* background-color: pink; */
     }
 
     .memberLevels h2{
@@ -321,23 +300,50 @@
 
     }
 
+    
     #contactUsMain h1{
         grid-column: 1/3;
         font-size: 2.5rem;
     }
 
-    .contactSection{
+
+
+    .pointsOfContact{
+        grid-row: 2/3;
+        grid-column: 1/2;
+        grid-template-columns: 1fr 1fr;
+        display:flex;
+        flex-direction: column;
+        
+        
+    }
+
+    .contactInfo{
+        background-color: #fcbf49;
+    }
+
+    .contactInfo, .pointsOfContact{
+        grid-row: 2/3;
         display: flex;
         flex-direction: column;
         font-size: 1.3rem;
+        margin: 2%;
+        
+
     }
-    .contactSection h3, .contactSection p{
+    .contactInfo h3, .contactInfo p, .pointsOfContact h3, .pointsOfContact p{
         text-align: left;
         
         
     }
-    
 
+    .contactForm{
+        grid-row:3/4;
+        grid-column: 1/4;
+        
+    }
+    
+    
 
     /*----------------------------------- DIRECTORY PAGE ------------------------------*/
 
@@ -346,10 +352,6 @@
         display: block;
     }
     .directoryList section{
-    /* display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 3rem; */
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
     align-items: center;
@@ -361,22 +363,6 @@
     grid-template-columns: 1fr 1fr 1fr;
     
     }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
