--- a/wdd230finalproject/styles/large.css
+++ b/wdd230finalproject/styles/large.css
@@ -1,9 +1,10 @@
 @media only screen and (min-width: 1001px){
 
 body{
-    background-color: yellow;
+    /* background-color: yellow; */
     display: grid;
     grid-template-columns: 1fr 8fr 1fr;
+    gap: unset;
 }
 header,footer{
     grid-column: 1/4;
@@ -31,10 +32,26 @@ main h1{
     grid-column: 1/3;
 }
 
+.weatherInfo{
+    display: flex;
+    flex-direction: column;
+    font-size: 1.2rem;
+}
+
+.weatherInfo p {
+    font-size: 1.2rem;
+}
+
 
 
 .hero{
     grid-column: 2/4;
+    font-size: 1.5rem;
+}
+
+
+.previousOrderContainer{
+    grid-column: 3/4;
 }
 
 
@@ -46,8 +63,8 @@ main h1{
 
 /*--------------------Fresh Order--------------------*/
 .freshPreviousOrderContainer{
-    grid-column: 1/3;
-    grid-row:2/3;
+    grid-column: 2/4;
+    grid-row: 3/4;
 }
 
 .order{
@@ -60,9 +77,15 @@ main h1{
 }
 
 .optionsHolder{
-    grid-column: 1/4;
+    grid-column: 1/3;
+    grid-row: 2/3;
 }
 
+#freshRandom{
+ 
+    grid-column: 1/2;
+    grid-row: 3/4;
+}
 
 
 
@@ -71,26 +94,38 @@ main h1{
     grid-column: 1/4;
     display: grid;
     grid-template-columns: 1fr 1fr;
+    gap: 1%;
+    padding: 2%;
    
 
 }
 
 .story h2{
     grid-column: 1/3;
+    text-align: center;
 }
+
 
 .story img{
     grid-row: 2/4;
-    width: 700px;
     justify-content: center;
     align-items: center;
     place-items: center;
+}
+
+.story div{
+    display: flex;
+    flex-direction: column;
 }
 .storeInfo{
     grid-row:3/4;
     grid-column: 3/4;
     
 }
+
+
+
+
 
 
 
