--- a/wdd230finalproject/styles/medium.css
+++ b/wdd230finalproject/styles/medium.css
@@ -1,8 +1,8 @@
 @media only screen and (min-width: 501px){
-    body{
+    /* body{
         background-color: pink;
         
-    }
+    } */
 
     header{
         grid-template-columns: 1fr 2fr;
@@ -18,15 +18,17 @@
         
         display: grid;
         grid-template-columns: 1fr 1fr;
+        
     }
 
     main h1{
         grid-column: 1/3;
     }
 
-    .heroImg{
-        width: 400px;
+    
 
+    .previousOrderContainer{
+        grid-column: 1/3;
     }
 
     .weatherCard{
@@ -61,14 +63,17 @@
 
     /*------------Fresh Order----------------*/
 
-
+    
 
     .freshPreviousOrderContainer{
         grid-column: 2/3;
     }
 
 
-
+    #freshRandom{
+        grid-column: 1/3;
+        display: flex;
+    }
 
     .optionsHolder{
         grid-column: 1/3;
