--- a/wdd230finalproject/styles/small.css
+++ b/wdd230finalproject/styles/small.css
@@ -8,7 +8,7 @@ body{
     flex-direction: column;
     gap: 5%;
     /* background-color: #fe4a49; */
-    
+
 }
 
 h1 ,h2 , h3{
@@ -87,7 +87,7 @@ nav{
     padding: 2%;
     text-align: center;
     /* background-color: pink; */
-    
+
 
 
 
@@ -121,7 +121,7 @@ nav a:hover {
     justify-content: center;
     align-items: center;
     text-align: left;
-    
+
     padding: 2%;
 }
 
@@ -189,7 +189,7 @@ select{
 
 
 .previousOrderContainer{
-    border: 5px solid red;
+    border: 5px solid black;
 }
 
 .previousOrder, .randomOrder{
@@ -213,8 +213,9 @@ select{
 }
 
 .iconDisplay{
-    position: relative;
     border: 5px solid black;
+    padding: 2%;
+    background-color: lightgray;
 }
 .icon{
     /* grid-column: 1/2;
@@ -255,7 +256,7 @@ select{
     padding: 2%;
     display: flex;
     justify-content: space-between;
-    border: 5px solid cyan;
+    border: 5px solid black;
 }
 
 
@@ -265,8 +266,8 @@ select{
 }
 
 .miniIcon{
-    width: 50px;
-    /* background-color: lime; */
+    background-color: lightgray;
+
 }
 
 
@@ -351,7 +352,7 @@ input{
     justify-content: center;
     align-items: center;
     gap: 5%;
-    
+
 }
 
 
@@ -375,7 +376,7 @@ input{
 }
 
 .optionsHolder{
-    
+
     border: 5px solid black;
     display: flex;
     flex-direction: column;
@@ -443,6 +444,7 @@ input{
 .outputFlavors{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    place-items: center;
 }
 
 
@@ -475,10 +477,28 @@ input{
     border: 5px solid black;
     margin-bottom: 5%;
     font-size: 1.5rem;
+    display: flex;
+    flex-direction: column;
 
 }
 
+/* .chosenFruit{
+   background-color: lime;
+
+   
+ 
+} */
+
+/* .spotIconHolder{
+    background-color: pink;
+    border: 5px solid red;
+} */
+
+/* .spotIconHolder img{
+    width: 200px;
+} */
+
 .story img{
-    
+
     border: 5px solid #Fe4a49;
 }
