--- a/wdd230finalproject/styles/small.css
+++ b/wdd230finalproject/styles/small.css
@@ -1,13 +1,10 @@
 body{
-    /* margin: 2%;
-    padding: 2%; */
-    /* border: 10px solid black; */
+   
     background-color: #009fb7;
     background-color: #f4f4f8;
     display: flex;
     flex-direction: column;
     gap: 5%;
-    /* background-color: #fe4a49; */
 
 }
 
@@ -21,15 +18,13 @@ p{
 }
 
 header{
-    /* border: 10px solid lime; */
+   
     display: grid;
     grid-template-columns: 1fr 1fr;
     text-align: center;
-    /* background-color: #fed766;
-    background-color: #fe4a49; */
+    
     background-color: #009fb7;
-    /* margin: 2%;
-    padding: 2%; */
+
 }
 
 main{
@@ -42,17 +37,10 @@ main{
     display:flex;
     flex-direction: column;
     gap: 2rem;
-    /* background-color: #fe4a49;
-    background-color: #f4f4f8;
-    background-color: #fed766; */
 
 }
 
 
-
-/* main h1 , .freshOrder, .freshRandom, .orderOutput{
-    background-color: #fed766;
-} */
 
 
 
@@ -61,7 +49,6 @@ main{
 
 
 footer{
-    /* border: 10px solid blue; */
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 20px;
@@ -76,9 +63,7 @@ footer p {
     font-size: 1.2rem;
 }
 
-/* footer div, footer a, footer p{
-    border: 20px solid pink;
-} */
+
 
 nav{
     display: grid;
@@ -86,7 +71,6 @@ nav{
     font-size: 2rem;
     padding: 2%;
     text-align: center;
-    /* background-color: pink; */
 
 
 
@@ -96,7 +80,6 @@ nav{
 nav a{
     display: flex;
     text-decoration: none;
-    /* background-color: red; */
     align-items: center;
     justify-content: center;
     color:#f4f4f8;
@@ -125,20 +108,13 @@ nav a:hover {
     padding: 2%;
 }
 
-/* .hero p{
-    font-size: 1.2rem;
-} */
 
 
 
 
 
 
-
-
-
-
-.homeOrder, .freshOrder{ /*order*/
+.homeOrder, .freshOrder{ 
     border: 5px solid black;
    display: grid;
    grid-template-columns: 1fr ;
@@ -146,9 +122,7 @@ nav a:hover {
 }
 
 .flavorsAndIcons{
-    /* display: grid;
-    grid-template-columns: 1fr 1fr;
-    place-items: center; */
+  
     display: flex;
     flex-direction: column;
 }
@@ -159,9 +133,7 @@ nav a:hover {
     justify-content: center;
     align-items: center;
 
-    /* display: flex;
-    justify-content: center;
-    align-items: center; */
+ 
 
 }
 
@@ -218,20 +190,12 @@ select{
     background-color: lightgray;
 }
 .icon{
-    /* grid-column: 1/2;
-    grid-row: 1/2;
-    z-index: 2; */
+  
     border: 1px solid yellow;
     position: relative;
 }
 
 .mainDisplay .degree{
-    /* z-index: 2;
-    grid-column: 1/2;
-    grid-row: 1/2;
-    color: lime;
-    font-size: 3rem; */
-
     position: absolute;
     top: 50%;
     left: 50%;
@@ -283,8 +247,7 @@ footer a{
 
 
 .socials{
-    /* display: flex;
-    justify-content: space-between; */
+  
     grid-column: 1/3;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -297,7 +260,7 @@ footer a{
 
 .lastMod{
     grid-column: 1/3;
-    /* background-color: lime; */
+  
 }
 
 
@@ -316,10 +279,7 @@ footer a{
     width: 50px;
 }
 
-/* form {
-    width: 100%;
 
-} */
 fieldset{
     width: 90%;
 }
@@ -358,13 +318,12 @@ input{
 
 
 .homeOrder, .freshOrder{
-    /*.order*/
     text-align: left;
-    /* background-color: lime; */
+    
 
 }
 
-.homeOrder fieldset{ /*order*/
+.homeOrder fieldset{ 
     margin: 10px;
     padding: 10px;
 }
@@ -384,13 +343,12 @@ input{
 }
 
 .options{
-    /* border: 5px solid yellow; */
+    
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 10px;
 
-    /* width: 100%;
-    height: 50%; */
+    
 }
 
 .fruitHolder{
@@ -449,9 +407,6 @@ input{
 
 
 
-/*-----------------something with the form has to be changed
-
-
 
 /*-------------About us page--------------*/
 .storeInfo{
@@ -482,21 +437,6 @@ input{
 
 }
 
-/* .chosenFruit{
-   background-color: lime;
-
-   
- 
-} */
-
-/* .spotIconHolder{
-    background-color: pink;
-    border: 5px solid red;
-} */
-
-/* .spotIconHolder img{
-    width: 200px;
-} */
 
 .story img{
 
