--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -125,7 +125,9 @@ nav a{
     grid-column: 1/5;
     grid-row: 2/3;
     
-    display: block;
+    display: flex;
+    
+    justify-content: center;
     padding: .8rem 2vw;
     text-decoration: none;
     border-top: 1px solid rgba(0,0,0,0.5);
